--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,5 @@
 version: "3.8"
+
 services:
   web:
     build: .
@@ -7,7 +8,7 @@ services:
     ports:
       - "3000:3000"
     volumes:
-      - ./db:/app/db
+      - ./db:/app/db             # SQLite persistent folder
     environment:
       - PORT=3000
       - DB_FILE=/app/db/data.sqlite
@@ -20,29 +21,30 @@ services:
       - "9090:9090"
     volumes:
       - ./prometheus.yml:/etc/prometheus/prometheus.yml:ro
+      - ./prometheus/rules:/etc/prometheus/rules              # mount alert rules folder
+      - prometheus_data:/prometheus                           # persistent TSDB
     depends_on:
       - web
     restart: unless-stopped
 
-  # ============================
-  # Week 3 - Grafana integration
-  # ============================
   grafana:
     image: grafana/grafana:latest
     container_name: grafana
     ports:
-      # Web app already uses host 3000, so expose Grafana on 3001 -> container 3000
       - "3001:3000"
     environment:
       - GF_SECURITY_ADMIN_USER=admin
       - GF_SECURITY_ADMIN_PASSWORD=admin
       - GF_USERS_ALLOW_SIGN_UP=false
     volumes:
-      # Week 3 - provision Prometheus as a data source
+      - grafana_data:/var/lib/grafana                         # persistent DB
       - ./grafana/provisioning/datasources:/etc/grafana/provisioning/datasources
-      # Week 3 - provision dashboards from files
       - ./grafana/provisioning/dashboards:/etc/grafana/provisioning/dashboards
       - ./grafana/dashboards:/var/lib/grafana/dashboards
     depends_on:
       - prometheus
     restart: unless-stopped
+
+volumes:
+  prometheus_data:
+  grafana_data:
